<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.francis.afinal.Home">

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_toLeftOf="@+id/textView5"
        android:layout_toStartOf="@+id/textView5"
        android:layout_marginTop="48dp"
        android:id="@+id/checkBox"
        android:hint="@string/Zuku" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox"
        android:layout_alignRight="@+id/checkBox"
        android:layout_alignEnd="@+id/checkBox"
        android:layout_marginTop="23dp"
        android:id="@+id/checkBox2"
        android:hint="@string/KPLC" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox2"
        android:layout_alignLeft="@+id/checkBox2"
        android:layout_alignStart="@+id/checkBox2"
        android:layout_marginTop="33dp"
        android:id="@+id/checkBox4"
        android:hint="@string/NCWSC" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:layout_alignBaseline="@+id/checkBox"
        android:layout_alignBottom="@+id/checkBox"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="87dp"
        android:layout_marginEnd="87dp"
        android:hint="@string/KES" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:layout_alignBaseline="@+id/checkBox2"
        android:layout_alignBottom="@+id/checkBox2"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:hint="@string/KES" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:layout_alignBaseline="@+id/checkBox4"
        android:layout_alignBottom="@+id/checkBox4"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:hint="@string/KES" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText13"
        android:layout_above="@+id/checkBox2"
        android:layout_toRightOf="@+id/textView7"
        android:layout_toEndOf="@+id/textView7"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_above="@+id/checkBox4"
        android:layout_alignLeft="@+id/editText13"
        android:layout_alignStart="@+id/editText13"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:id="@+id/editText14" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_alignTop="@+id/checkBox4"
        android:layout_alignLeft="@+id/editText14"
        android:layout_alignStart="@+id/editText14"
        android:id="@+id/editText15" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:id="@+id/textView11"
        android:layout_below="@+id/editText15"
        android:layout_alignRight="@+id/textView8"
        android:layout_alignEnd="@+id/textView8"
        android:hint="@string/Charges" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText16"
        android:layout_alignBaseline="@+id/textView11"
        android:layout_alignBottom="@+id/textView11"
        android:layout_alignLeft="@+id/editText15"
        android:layout_alignStart="@+id/editText15" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText16"
        android:layout_alignLeft="@+id/textView11"
        android:layout_alignStart="@+id/textView11"
        android:layout_marginTop="28dp"
        android:id="@+id/textView12"
        android:hint="@string/Total" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_below="@+id/editText16"
        android:layout_alignLeft="@+id/editText16"
        android:layout_alignStart="@+id/editText16"
        android:layout_marginTop="13dp"
        android:id="@+id/editText17" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText17"
        android:layout_alignLeft="@+id/textView12"
        android:layout_alignStart="@+id/textView12"
        android:layout_marginTop="21dp"
        android:id="@+id/button5"
        android:hint="@string/Payment" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:id="@+id/textView5"
        android:hint="@string/Welcome"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/textView6"
        android:layout_toStartOf="@+id/textView6" />

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:theme ="@style/ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:minHeight="?attr/actionBarSize"
        android:layout_above="@+id/checkBox"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp"
        android:id="@+id/toolbar" />

</RelativeLayout>
